- fix offer this cruise when we have only Ven Soci block - fix offer label inside the menu when we have only 1 offer - fix style (remove grey) footnotes lb offer - fix cta size es - fix icon lb offer overlapping - fix offer menu V6828 - fix bottom bar with the RAQ does not look fine on a voyage that has EBB applicable. Text is cut. => Spanish - include all i18n

--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/offers.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/offers.less
@@ -501,6 +501,7 @@
         }
         .block-text {
           width: 100%;
+          font-size: 11px !important;
         }
       }
 
